# TRYMON-GAME-ENGINE

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
data/: trymon.db
public/wasm/: trymon_kernel_rust.js  trymon_kernel_rust_bg.wasm
server/: package-lock.json  package.json
server/src/: database.ts  index.ts
server/src/routes/: binaries.ts  execute.ts
src/SCRIPT/: App.tsx  data.ts  style.css
src/SCRIPT/views/: GamesView.tsx  HomeView.tsx  SelectionView.tsx
src/abstract-software-trymon/applications-trymon/: BinariesApp.tsx  BrowserApp.tsx  MonitorApp.tsx
src/bridge/: trymonPackage.ts
src/interface/: App.tsx  style.css
src/interface/api/: client.ts
src/interface/components/: BinaryList.tsx  BinaryUploader.tsx  ContextMenu.tsx  StatusCard.tsx  SystemComponents.tsx  TerminalComponent.tsx  TrymonLogo.tsx
src/interface/hooks/: useApi.ts  useEmulator.ts  useKernelState.ts  useShellWasm.ts
src/interface/services/: kernelService.ts
src/interface/views/: BinariesView.tsx  DashboardView.tsx  MonitoringView.tsx  SettingsView.tsx  TerminalView.tsx
src/kernel-rust/: Cargo.toml
src/kernel-rust/src/: binary_loader.rs  error.rs  kernel_api.rs  lib.rs  process_manager.rs  shell.rs  trymon_engine.rs  virtual_fs.rs
src/kernel-rust/src/tvm/: appimage_extractor.rs  bytecode.rs  compiler.rs  disassembler.rs  interpreter.rs  libc_emulator.rs  memory.rs  mod.rs  packager.rs  sandbox.rs  symbol_resolver.rs  syscalls.rs  vm.rs
src/wasm/: v86-emulator.ts
src/wasm/pkg/: package.json  trymon_kernel_rust.d.ts  (+3 more)
(+9 files in other folders)
