[package]
name = "trymon-kernel-rust"
version = "0.1.0"
edition = "2021"
description = "Trymon OS - Rust Kernel Module for Linux Binary Execution in WASM"
authors = ["Trymon Team"]
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Blob",
    "Url",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "AbortController"
]}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Binary parsing
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
tar = "0.4"
cpio = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
wasm-logger = "0.2"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.7", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Async support
wasm-bindgen-futures = "0.4"
futures = "0.3"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "unwind"     # Better error reporting for debugging

[profile.dev]
opt-level = 0
debug = true
